--- a/config-client-dev.yml
+++ b/config-client-dev.yml
@@ -7,4 +7,4 @@ eureka:
   client:
     serviceUrl:
       defaultZone: http://peer1:8763/eureka/
-foo: foo version 100000yyy
+foo: foo version 100000yyyrrrr
